# SleeperX

./: .gitignore  LICENSE  README.md  README_CN.md  SleeperX.spec  __main__.py  build.py  common.py  pyproject.toml  requirements.txt  setup.py  sleeper_app.py
.github/workflows/: release.yml
app/: __init__.py  busy_work.py  common.py  config.py  process_daemon.py
app/base/: application.py  config.py
app/core/: config.py  engine.py  logging_setup.py  models.py  ports.py  updater.py
app/helper/: daemon.py  install.py
app/i18n/: __init__.py  chinese.py  chinese_t.py  english.py  japanese.py  korean.py
app/platform/: dialogs.py  idle.py  iokit.py  lid.py  login_item.py  notifications.py  power.py  privileged_client.py  sleep.py  sleepwatch.py  sysinfo.py
app/res/: const.py  icon.icns
app/res/language/: chinese.py  english.py  (+1 more)
app/ui/: app_delegate.py  controller.py  menu_model.py  statusbar.py
app/util/: apple_script.py  object_convert.py  osa_api.py  process_daemon.py  system_api.py
app/view/: application.py
doc/: events_example.py
res/: const.py  icon.icns  icon.psd  lang.py
res/language/: __init__.py  chinese.py  chinese_t.py  english.py  japanese.py  korean.py  translate_language.py
tests/: test_check_update.py  test_config.py  test_controller.py  test_countdown_integration.py  test_engine.py  test_helper.py  test_login_item.py  test_menu_model.py  test_notifications.py  test_privileged_client.py  test_sleepwatch.py  test_statusbar.py  test_updater.py
tools/translate/: __init__.py
util/: apple_script.py  github.py  osa_api.py  system_api.py
(+5 files in other folders)
