[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "SleeperX"
version = "2.0.0"
description = "PyObjC-native macOS menubar power/sleep manager for Hackintosh users."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "HsOjo" }]
dependencies = [
    "beautifulsoup4>=4.12",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/HsOjo/SleeperX"

[project.optional-dependencies]
build = ["pyinstaller>=6.3"]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false

[tool.setuptools.packages.find]
include = ["app*"]
